# ner-sdk

./: .gitignore  CONTRIBUTING.md  README.md  README_old.md  Readme.txt  Readme.txt.bak  developer_guide.md  out.json  out.jsonl  pyproject.toml  raw.txt
docs/: ARCHITECTURE_GUIDE.md  DEVELOPER_GUIDE.md  EXTENDING_SDK.md
env_311/: pyvenv.cfg
env_311/Scripts/: activate  activate.bat
src/ner_sdk/: cli.py  init.py  io_utils.py  labeler.py  loader.py  resolve.py
src/ner_sdk.egg-info/: SOURCES.txt  top_level.txt
src/ner_sdk/core/: rules.py
src/ner_sdk/domains/finance/: hooks.py  patterns.yaml
src/ner_sdk/domains/medical/: hooks.py  patterns.yaml
src/ner_sdk/test/: test_core.py  test_finance_pack.py
